# data-pipeline-airflow

./: README.md  main.py
src/configs/: connector_config.yml  schemas_config.yml
src/core/: connector_config.yml
src/dpa-connectors/: base_connector.py
src/dpa_connectors/: api_connector.py  base_connector.py  pyproject.toml
src/dpa_utils/: api_config.py  base_config.py  schema_config.py
